--- a/examen2_solucion.tex
+++ b/examen2_solucion.tex
@@ -127,7 +127,7 @@ En mecánica cuántica, toda cantidad físicamente medible (observable) tiene as
 
 \end{solution}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+Hola
 
 \end{questions}
 
