--- a/examen2_solucion.tex
+++ b/examen2_solucion.tex
@@ -128,6 +128,7 @@ En mecánica cuántica, toda cantidad físicamente medible (observable) tiene as
 \end{solution}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Hola
+julio
 
 \end{questions}
 
